Fixed WebKit line spacing issue in callouts.

--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -751,7 +751,8 @@ label {
     /* Transition for Mozilla (Firefox 4.0+) */
        -moz-transition: font-size 150ms ease 150ms;
     /* Transition for WebKit */
-    -webkit-transition: font-size 150ms ease 150ms;
+    /* NOTE: In the WebKit specific CSS below, the line-height property is required to fix some issues and this property also must transition with the font size. */
+    -webkit-transition: font-size 150ms ease 150ms, line-height 150ms ease 150ms;
     /* Transition for Opera 10.5+ */
             transition: font-size 150ms ease 150ms;
 }
@@ -1344,6 +1345,7 @@ div ::-webkit-scrollbar-thumb:hover {
 }
 
 
+
 /*******************************/
 /* WebKit & Opera specific CSS */
 /*******************************/
@@ -1353,6 +1355,15 @@ div ::-webkit-scrollbar-thumb:hover {
     margin-bottom: 0;
     margin-top:    5px;
     padding: 1px;
+}
+
+/****************************/
+/* Just WebKit specific CSS */
+/****************************/
+
+.webkit .lex-orig_word {
+    /* NOTE: Because the font size changes via a CSS transition, the line-height also must transition as well. See above for the declaration. */
+    line-height: 150%;
 }
 
 
